--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@ code span.ot { color: #007020; }
 <section class="main-content">
 <div id="prerequisites" class="section level2">
 <h2>Prerequisites</h2>
-<p>Please bring a laptop with a fully charged battery to the workshops.</p>
-<p>Download and install latest version of the following software <strong>before</strong> the first workshop:</p>
+<p><strong>Please bring a laptop with a fully charged battery to the workshops.</strong></p>
+<p><strong>Download and install</strong> the latest version of the following software <strong>before</strong> the first workshop:</p>
 <ul>
 <li><a href="https://cran.r-project.org/">R Software</a></li>
 <li><a href="https://www.rstudio.com/products/rstudio/download/">Rstudio</a></li>
+<li></li>
 </ul>
 </div>
 <div id="workshop-on-line-materials" class="section level2">
