Added Welcome message

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ code span.ot { color: #007020; }
 
 
 <section class="main-content">
+<p>Welcome to the <strong>FCUL R Workshops</strong> website. Workshops information, notes and materials will be posted here.</p>
 <div id="prerequisites" class="section level2">
 <h2>Prerequisites</h2>
 <p><strong>Please bring a laptop with a fully charged battery to the workshops.</strong></p>
@@ -60,7 +61,6 @@ code span.ot { color: #007020; }
 <ul>
 <li><a href="https://cran.r-project.org/">R Software</a></li>
 <li><a href="https://www.rstudio.com/products/rstudio/download/">Rstudio</a></li>
-<li></li>
 </ul>
 </div>
 <div id="workshop-on-line-materials" class="section level2">
