--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ code span.ot { color: #007020; }
 
 
 <section class="main-content">
-<p>Welcome to the <strong>FCUL R Workshops</strong> website. Workshops information, notes and materials will be posted here.</p>
+<p>Welcome to the <strong>FCUL R Workshops</strong> website. Workshop information and materials will be posted here.</p>
 <div id="prerequisites" class="section level2">
 <h2>Prerequisites</h2>
 <p><strong>Please bring a laptop with a fully charged battery to the workshops.</strong></p>
@@ -144,6 +144,10 @@ code span.ot { color: #007020; }
 <ul>
 <li><a href="https://www.r-project.org/contributors.html">R Core Team</a> for their hard work in developing a stable and reliable product.</li>
 </ul>
+<p><br></p>
+<center>
+Last updated: Wed 09 Oct 2019 (20:42:54)
+</center>
 </div>
 </section>
 
