Added zip file and consistent directory structure information.

--- a/index.html
+++ b/index.html
@@ -60,8 +60,16 @@ code span.ot { color: #007020; }
 <p><strong>Download and install</strong> the latest version of the following software <strong>before</strong> the first workshop:</p>
 <ul>
 <li><a href="https://cran.r-project.org/">R Software</a></li>
-<li><a href="https://www.rstudio.com/products/rstudio/download/">Rstudio</a></li>
+<li><a href="https://www.rstudio.com/products/rstudio/download/">RStudio</a></li>
 </ul>
+<p><strong>Important:</strong> At each we workshop we will provide links for you to download materials (e.g. workshop notes, exercises and solutions). For consistency and to help us support you please:</p>
+<ol style="list-style-type: decimal">
+<li>Select a folder on your computer to work in (e.g. <code>Documents</code>)</li>
+<li>Download and unzip the following file into your selected folder:
+<ul>
+<li><a href="http://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip" class="uri">http://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip</a></li>
+</ul></li>
+</ol>
 </div>
 <div id="workshop-on-line-materials" class="section level2">
 <h2>Workshop On-line Materials</h2>
@@ -89,9 +97,9 @@ code span.ot { color: #007020; }
 </ul></li>
 </ul>
 <p><br></p>
-<center>
-<strong>No workshops on 01 Nov 2019 and 08 Nov 2019</strong>
-</center>
+<ul>
+<li><strong>No workshops on 01 Nov 2019 and 08 Nov 2019</strong></li>
+</ul>
 <p><br></p>
 <ul>
 <li><strong>Workshop 4: Data Visualisation using <code>ggplot2</code></strong> <em>(15 Nov 2019)</em> <br>   <em>Create beautiful graphical presentations using R.</em> <br>   <em>Customise your plots.</em></li>
@@ -145,8 +153,9 @@ code span.ot { color: #007020; }
 <li><a href="https://www.r-project.org/contributors.html">R Core Team</a> for their hard work in developing a stable and reliable product.</li>
 </ul>
 <p><br></p>
+<hr>
 <center>
-Last updated: Wed 09 Oct 2019 (20:42:54)
+Last updated: Thu 10 Oct 2019 (14:47:25)
 </center>
 </div>
 </section>
