Workshop 1: materials added.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,11 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 1: Introduction to R</strong> <em>(11 Oct 2019)</em> <br>   <em>Learn about the fundamentals of R thinking.</em> <br>   <em>Practical exercises to understand the fundamentals of R .</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Exercises/Base-R/Base-R-Exercises.pdf">Exercises: Base R Concepts</a></li>
+<li><a href="https://raw.githubusercontent.com/saghirb/R-datatable-Intro/master/Exercises/Base-R/Base-R-Solutions.R">Solutions: Base R Concepts</a>
+<ul>
+<li><em>Solutions are auto generated so comments are not correct!</em></li>
+</ul></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -155,7 +159,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Thu 10 Oct 2019 (14:47:25)
+Last updated: Fri 11 Oct 2019 (15:04:20)
 </center>
 </div>
 </section>
