Minor update text

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ code span.ot { color: #007020; }
 <li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Exercises/Base-R/Base-R-Exercises.pdf">Exercises: Base R Concepts</a></li>
 <li><a href="https://raw.githubusercontent.com/saghirb/R-datatable-Intro/master/Exercises/Base-R/Base-R-Solutions.R">Solutions: Base R Concepts</a>
 <ul>
-<li><em>Solutions are auto generated so comments are not correct!</em></li>
+<li><em>The comments are not correct as the solutions are auto-generated!</em></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -159,7 +159,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 11 Oct 2019 (15:04:20)
+Last updated: Fri 11 Oct 2019 (15:09:36)
 </center>
 </div>
 </section>
