Added Workshop 1 Materials link

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ code span.ot { color: #007020; }
 <li>Select a folder on your computer to work in (e.g. <code>Documents</code>)</li>
 <li>Download and unzip the following file into your selected folder:
 <ul>
-<li><a href="http://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip" class="uri">http://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip</a></li>
+<li><a href="https://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip" class="uri">https://ilustat.com/shared/FCUL_R_2019w2/FCUL_R_2019w2.zip</a></li>
 </ul></li>
 </ol>
 </div>
@@ -89,7 +89,7 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 2: Working with Datasets using data.table</strong> <em>(18 Oct 2019)</em> <br>   <em>Learn to manipulate and summarise data.</em> <br>   <em>Exercises based on real-life world population data.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://ilustat.com/shared/GSiRdt.zip" class="uri">https://ilustat.com/shared/GSiRdt.zip</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -159,7 +159,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 11 Oct 2019 (15:09:36)
+Last updated: Fri 18 Oct 2019 (09:20:55)
 </center>
 </div>
 </section>
