Added data.table world population solutions

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 2: Working with Datasets using data.table</strong> <em>(18 Oct 2019)</em> <br>   <em>Learn to manipulate and summarise data.</em> <br>   <em>Exercises based on real-life world population data.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li><a href="https://ilustat.com/shared/GSiRdt.zip" class="uri">https://ilustat.com/shared/GSiRdt.zip</a></li>
+<li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Share/GSiRdt.zip">Notes &amp; Exercises</a></li>
+<li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Share/World-Popn-dt-Solutions.zip">Solutions: World Population <code>data.table</code> Exercises</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -159,7 +160,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 18 Oct 2019 (09:20:55)
+Last updated: Fri 18 Oct 2019 (15:54:47)
 </center>
 </div>
 </section>
