Added links for R Markdown Materials & Exercise sheet

--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 3: Creating HTML and PDF Documents using R Markdown</strong> <em>(25 Oct 2019)</em> <br>   <em>Combining R programming and document writing into one process.</em> <br>   <em>Learn how to do reproducible research.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://ilustat.com/shared/RmarkdownWS.zip">Notes &amp; Materials</a></li>
+<li><a href="https://ilustat.com/shared/RMarkdown-Exercises.pdf">Exercise Sheet</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -160,7 +161,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 18 Oct 2019 (15:54:47)
+Last updated: Thu 24 Oct 2019 (16:07:58)
 </center>
 </div>
 </section>
