Added link to Workshop 3 (R Markdown) exercise solutions

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ code span.ot { color: #007020; }
 <ul>
 <li><a href="https://ilustat.com/shared/RmarkdownWS.zip">Notes &amp; Materials</a></li>
 <li><a href="https://ilustat.com/shared/RMarkdown-Exercises.pdf">Exercise Sheet</a></li>
+<li><a href="https://ilustat.com/shared/RmdWS-Solutions.zip">Solutions to Exercises</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -161,7 +162,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Thu 24 Oct 2019 (16:07:58)
+Last updated: Fri 25 Oct 2019 (15:16:54)
 </center>
 </div>
 </section>
