Updated for ggplot2 session

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 4: Data Visualisation using <code>ggplot2</code></strong> <em>(15 Nov 2019)</em> <br>   <em>Create beautiful graphical presentations using R.</em> <br>   <em>Customise your plots.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Intro.zip">Notes &amp; Exercises</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -162,7 +162,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 25 Oct 2019 (15:16:54)
+Last updated: Thu 14 Nov 2019 (18:07:22)
 </center>
 </div>
 </section>
