--- a/index.html
+++ b/index.html
@@ -112,7 +112,9 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 4: Data Visualisation using <code>ggplot2</code></strong> <em>(15 Nov 2019)</em> <br>   <em>Create beautiful graphical presentations using R.</em> <br>   <em>Customise your plots.</em></li>
 <li><strong>Materials</strong>
 <ul>
+<li><a href="https://youtu.be/jbkSRLYSojo">Hans Rosling Video: Gapminder Data Visualisation</a></li>
 <li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Intro.zip">Notes &amp; Exercises</a></li>
+<li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Solutions.zip"><code>ggplot2</code> Exercise Solutions</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -162,7 +164,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Thu 14 Nov 2019 (18:07:22)
+Last updated: Fri 15 Nov 2019 (16:02:45)
 </center>
 </div>
 </section>
