Started to add additional materials.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ code span.ot { color: #007020; }
 <ul>
 <li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Share/GSiRdt.zip">Notes &amp; Exercises</a></li>
 <li><a href="https://github.com/saghirb/R-datatable-Intro/raw/master/Share/World-Popn-dt-Solutions.zip">Solutions: World Population <code>data.table</code> Exercises</a></li>
+<li>Additional Materials
+<ul>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/master/datatable.pdf">data.table Cheat Sheet</a></li>
+</ul></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -101,6 +105,11 @@ code span.ot { color: #007020; }
 <li><a href="https://ilustat.com/shared/RmarkdownWS.zip">Notes &amp; Materials</a></li>
 <li><a href="https://ilustat.com/shared/RMarkdown-Exercises.pdf">Exercise Sheet</a></li>
 <li><a href="https://ilustat.com/shared/RmdWS-Solutions.zip">Solutions to Exercises</a></li>
+<li>Additional Materials
+<ul>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/rmarkdown-2.0.pdf">R Markdown Cheat Sheet</a></li>
+<li><a href="https://bookdown.org/yihui/rmarkdown/">On-line R Markdown Book</a></li>
+</ul></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -115,6 +124,11 @@ code span.ot { color: #007020; }
 <li><a href="https://youtu.be/jbkSRLYSojo">Hans Rosling Video: Gapminder Data Visualisation</a></li>
 <li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Intro.zip">Notes &amp; Exercises</a></li>
 <li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Solutions.zip"><code>ggplot2</code> Exercise Solutions</a></li>
+<li>Additional Materials
+<ul>
+<li><a href="www.ggplot2-exts.org/">ggplot2 extensions</a></li>
+<li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">ggplot2 Cheat Sheet</a></li>
+</ul></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -164,7 +178,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 15 Nov 2019 (16:02:45)
+Last updated: Mon 18 Nov 2019 (17:46:03)
 </center>
 </div>
 </section>
