Added Git and GitHub set up instructions.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@ code span.ot { color: #007020; }
 <p><br></p>
 <ul>
 <li><strong>Workshop 5: Getting Started with Git and GitHub for R Users</strong> <em>(22 Nov 2019)</em> <br>   <em>Share you work and collaborate on-line using R.</em> <br>   <em>Keep the history (and backup) of your work.</em></li>
+<li><strong>Pre-workshop setup</strong>
+<ul>
+<li>Install git from <a href="https://git-scm.com/downloads" class="uri">https://git-scm.com/downloads</a></li>
+<li>Create a GitHub account at: <a href="https://github.com/" class="uri">https://github.com/</a></li>
+<li>Recommended: Install GitHub Desktop <a href="https://desktop.github.com/" class="uri">https://desktop.github.com/</a></li>
+</ul></li>
 <li><strong>Materials</strong>
 <ul>
 <li>To be posted.</li>
@@ -178,7 +184,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Mon 18 Nov 2019 (17:46:03)
+Last updated: Tue 19 Nov 2019 (09:05:55)
 </center>
 </div>
 </section>
