Fixed broken link

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ code span.ot { color: #007020; }
 <li><a href="https://github.com/saghirb/ggplot2-Intro-Workshop/raw/master/Share/ggplot2-Solutions.zip"><code>ggplot2</code> Exercise Solutions</a></li>
 <li>Additional Materials
 <ul>
-<li><a href="www.ggplot2-exts.org/">ggplot2 extensions</a></li>
+<li><a href="https://www.ggplot2-exts.org/">ggplot2 extensions</a></li>
 <li><a href="https://github.com/rstudio/cheatsheets/raw/master/data-visualization-2.1.pdf">ggplot2 Cheat Sheet</a></li>
 </ul></li>
 </ul></li>
@@ -184,7 +184,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Tue 19 Nov 2019 (09:05:55)
+Last updated: Wed 20 Nov 2019 (11:02:37)
 </center>
 </div>
 </section>
