Added link to PDF slides for Git and GitHub workshop

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ code span.ot { color: #007020; }
 </ul></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://github.com/saghirb/Getting-Started-with-Git-and-GitHub-for-R-Users/raw/master/Presentation/Getting-Started-with-Git-and-GitHub-for-R-Users.pdf">PDF Slides</a></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -184,7 +184,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Wed 20 Nov 2019 (11:02:37)
+Last updated: Thu 21 Nov 2019 (15:49:44)
 </center>
 </div>
 </section>
