Added Workshop 6 slides

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 6: Workshops Review &amp; Using R in Real-life</strong> <em>(29 Nov 2019)</em><br>   <em>Review of previous workshops.</em> <br>   <em>Practical exercise to spot and fix common errors.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://ilustat.com/shared/r-rdatatable-Tidy-Data-Workshop.zip">PDF &amp; HTML Slides</a> - <strong>Note:</strong> PDF slides to be fixed.</li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -184,7 +184,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Thu 21 Nov 2019 (15:49:44)
+Last updated: Fri 29 Nov 2019 (07:58:16)
 </center>
 </div>
 </section>
