Updated Workshop 6 link. Added Workshop 7 Exercise

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 6: Workshops Review &amp; Using R in Real-life</strong> <em>(29 Nov 2019)</em><br>   <em>Review of previous workshops.</em> <br>   <em>Practical exercise to spot and fix common errors.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li><a href="https://ilustat.com/shared/r-rdatatable-Tidy-Data-Workshop.zip">PDF &amp; HTML Slides</a> - <strong>Note:</strong> PDF slides to be fixed.</li>
+<li><a href="https://ilustat.com/shared/rdatatable-Tidy-Data-Workshop.zip">PDF &amp; HTML Slides</a> - <strong>Note:</strong> PDF slides to be fixed.</li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -158,7 +158,14 @@ code span.ot { color: #007020; }
 <li><strong>Workshop 7: Case study: Women in Parliament Data </strong> <em>(06 Dec 2019)</em> <br>   <em>Use <code>data.table</code> and <code>ggplot</code> to work with real data.</em> <br>   <em>Practice reproducible research using a real life example.</em></li>
 <li><strong>Materials</strong>
 <ul>
-<li>To be posted.</li>
+<li><a href="https://github.com/saghirb/WiP-Tidy-Data-dt">Exercise: Tidying the World Bank’s “Women in Parliament” Data</a>
+<ul>
+<li>From GitHub fork <a href="https://github.com/saghirb/WiP-Tidy-Data-dt" class="uri">https://github.com/saghirb/WiP-Tidy-Data-dt</a></li>
+<li>Clone this fork (from your GitHub account) to your PC.</li>
+<li>Use GitHub Desktop.</li>
+<li>Open the WiP-dt-Tidy-Data.Rproj</li>
+<li>Regularly commit and then push to your GitHub account.</li>
+</ul></li>
 </ul></li>
 </ul>
 <p><br></p>
@@ -184,7 +191,7 @@ code span.ot { color: #007020; }
 <p><br></p>
 <hr>
 <center>
-Last updated: Fri 29 Nov 2019 (07:58:16)
+Last updated: Mon 09 Dec 2019 (09:58:06)
 </center>
 </div>
 </section>
