Removed links to repository files as they were confusing.

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 <li><a href="https://github.com/saghirb/Case-Study-WiP-dt"><strong>A Solution:</strong> Tidying the World Bank’s “Women in Parliament” Data</a>
 <ul>
 <li><em>Optional:</em> From GitHub fork <a href="https://github.com/saghirb/Case-Study-WiP-dt" class="uri">https://github.com/saghirb/Case-Study-WiP-dt</a></li>
-<li>Look at the file <a href="https://github.com/saghirb/Case-Study-WiP-dt/blob/master/Women_in_Parliament_Report.Rmd">Women_in_Parliament_Report.Rmd</a>
+<li>Look at the files <code>Women_in_Parliament_Report.Rmd</code> and <code>Women_in_Parliament_Report.html</code>.
 <ul>
-<li>Look out for new packages and functions.</li>
+<li>Look out for any new packages and functions for you.</li>
 </ul></li>
 <li>On GitHub look into the “Commit” history and “Pull” requests.</li>
 <li>Compare it to your solution to the exercise above.</li>
@@ -192,7 +192,7 @@
 <p><br></p>
 <hr>
 <center>
-Last updated: Thu 12 Dec 2019 (14:34:28)
+Last updated: Thu 12 Dec 2019 (14:51:59)
 </center>
 </div>
 </section>
